--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Casey Rockmore, Speech-Language Pathologist</title>
 		
 		<link rel="stylesheet" href="reset.css" type="text/css" />
+		<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 		
 		<style type="text/css">
 			
@@ -43,6 +44,7 @@
 			
 			div#header > div > span {
 				display: block;
+				font-family: "Lato", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 			}
 			
 			div#header > div > span#name {
