--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<div id="header">
 				<div>
 					<span id="name">
-						Casey P Rockmore
+						Casey P Rockmore, MA CCC-SLP
 					</span>
 					<span id="title">
 						Speech-Language Pathologist
