--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 			div#header > div > span#title {
 				display: block;
 				font-size: 1.5em;
+				line-height: 1.2em;
 				margin-top: 0.4em;
 				color: #555;
 			}
@@ -133,9 +134,11 @@
 			<div id="header">
 				<div>
 					<span id="name">
-						Casey P Rockmore, MA CCC-SLP
+						Casey P Rockmore
 					</span>
 					<span id="title">
+						MA CCC-SLP
+						<br />
 						Speech-Language Pathologist
 					</span>
 				</div>
