Add a viewport tag to help on iPhone.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<link rel="stylesheet" href="reset.css" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 		
+		<meta name="viewport" content="width=600, initial-scale=1.0">
+		
 		<style type="text/css">
 			
 			body {
