--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 				<img src="images/26.jpg" />
 				<img src="images/27.jpg" />
 				<img src="images/28.jpg" />
+				<img src="images/29.jpg" />
 				
 			</div>
 		</div>
