--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
 						MA CCC-SLP
 						<br />
 						Speech-Language Pathologist
+						<br />
+						Vancouver, Washington
 					</span>
 				</div>
 			</div>
