Added photo and two testimonials

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 				<img src="images/12.jpg" />
 				<img src="images/13.jpg" />
 				<img src="images/14.jpg" />
+				<img src="images/15.jpg" />
 				<img src="images/16.jpg" />
 				<img src="images/17.jpg" />
 				<img src="images/18.jpg" />
@@ -222,6 +223,24 @@
 						"My son Daniel had the privilege of being with Casey for 2 years. He came to Casey and he was only producing sounds. His voice was his tablet. Even though he was amazing on his tablet, that was his voice. No voice from his sweet mouth. As a parent who had a child who was non verbal, you crave to hear just one word, or the most important “I love you.”  I didn’t know what to expect coming to Casey. It was one of the smartest decisions I have ever made in my life. Casey really thought outside of the box. I have never seen so much passion and knowledge from a therapist in my life and I have been through many therapists before. Casey blew my mind. She started with the physical PROMPT method which was key for Daniel. I was so thankful she had training in that. Over the course of a couple months, my son was speaking simple words, then phrases, and now full sentences. My son no longer uses his tablet to communicate. He has a voice of his own. If anyone has the privilege to have their child seen by Casey, I would say you are extremely lucky. Therapists like Casey don’t come around often. They are once in a lifetime. I will forever be grateful for Casey. My son will too. Daniel is a definite success story! Thank you Casey!! You helped change our lives!""
 						<span>
 							- Ginny L., son age 7
+						</span>
+					</div>
+				</div>
+				
+				<div>
+					<div>
+						"Casey is an amazing therapist. She has helped my son, who has been diagnosed with ASD and developmental delays. She not only helped him but helped us through many things as a family."
+						<span>
+							- Amanda M., son age 5
+						</span>
+					</div>
+				</div>
+				
+				<div>
+					<div>
+						"Casey was more than we could have asked for. We were working with another therapist before Casey came into our lives. While our son grew greatly with our previous SLP, the love, care, and attention Casey showed William was above and beyond. I saw huge leaps and bounds in the time we were working with her. When it came time for graduation from therapy, it was bittersweet. We were so proud of William for getting to where he was at but so sad to leave Casey. William still talks about Miss Casey and going to speech. She creates the most welcoming and fun environment that helps children thrive. I don’t know what we would have done without her."
+						<span>
+							- Danielle A., son age 3
 						</span>
 					</div>
 				</div>
