--- a/index.html
+++ b/index.html
@@ -245,6 +245,14 @@
 					</div>
 				</div>
 				
+				<div>
+					<div>
+						"Working with Casey has been amazing. Not only has she helped my twins come a long way in their speech, but she has also helped me understand how I can help them at home. She has turned this difficult situation into a fun learning experience we can all learn from."
+						<span>
+							- Laralei J., son and daughter age 4
+						</span>
+					</div>
+				</div>
 			</div>
 		</div>
 		
