--- a/index.html
+++ b/index.html
@@ -186,17 +186,28 @@
 		</div>
 		
 		<div class="center">
-			<!--
+			
 			<div id="paragraph">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius pellentesque fringilla. Pellentesque ut erat fringilla, venenatis ante quis, consectetur lacus.
-
+				I have been practicing as a pediatric Speech-Language Pathologist in private practice since 2014. After earning my Bachelor's degree in Cognitive Psychology with a minor in Linguistics from University of California, Irvine, I worked as a behavioral therapist in Orange County, California. I implemented Applied Behavioral Analysis (ABA) therapy to children diagnosed with Autism Spectrum Disorder. Then I earned my Master's degree in Speech, Language, and Hearing Sciences from San Diego State University, after which I practiced in a private practice pediatric clinic in San Diego, California. I worked with clients diagnosed with Autism Spectrum Disorder, Asperger's Syndrome, Cerebral palsy, Down Syndrome, Attention Deficit Hyperactivity Disorder, Traumatic Brain Injury, chromosomal abnormalities, medically fragile, Childhood Apraxia of Speech, intellectual disability, hearing loss, learning disability, mixed receptive-expressive language disorder, phonological disorder, speech sound production disorder, oral motor dysfunction, disfluency, auditory processing disorder, and social communication disorder. While in San Diego, I created and implemented a summer social skills camp to promote socialization in clients with Autism Spectrum Disorder and Asperger's Syndrome. In August 2017, I moved to Portland, Oregon and began practicing in Portland, Oregon and Vancouver, Washington.
 				<br /><br />
-				
-				Phasellus in ante porttitor, ultrices nunc et, iaculis sapien. Pellentesque ornare tempor imperdiet. Nam sed ipsum sed diam dictum interdum. Cras vestibulum dolor ut ligula malesuada, in suscipit erat dictum. Fusce pretium tortor nisi, in laoreet dui laoreet eget. Maecenas purus mauris, tempus in justo eu, pellentesque facilisis velit. Praesent quis erat nec justo ultricies lacinia id pulvinar lorem.
+				I hold my Speech-Language Pathology license through the American Speech Language Hearing Association, as well as state licenses in Washington, Oregon, and California. In my practice, I combine my background in Behavioral Therapy and Speech-Language Pathology to provide effective, result-based therapy while working closely with parents to ensure carryover and generalization. I have worked primarily in a 1:1 environment, but also have provided group therapy. I have been fortunate enough to have collaborated with pediatric Occupational Therapists and Physical Therapists in order to develop the most effective and individualized plan of care for each of my clients. I believe in child-centered therapy focusing on functional communication and evidence-based practice.
+				<br /><br />
+				I have received education, training, and have furthered my professional growth in the following approaches:
+				<br /><br />
+				+ PROMPT trained for Childhood Apraxia of Speech and oral motor planning difficulties
+				<br /><br />
+				+ Kaufman Apraxia approach
+				<br /><br />
+				+ Michelle-Garcia Winner's Social-Cognitive Development Programs
+				<br /><br />
+				+ Therapy developed with consideration of social-emotional difficulties
+				<br /><br />
+				+ Play-based therapy
+
 			</div>
 			
 			<div class="divider"></div>
-			-->
+			
 			
 			<div id="testimonials">
 				
