--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 		
 		<div id="imageBar">
 			<div id="images">
-				<img src="images/1.jpeg" />
-				<img src="images/2.jpeg" />
-				<img src="images/3.jpeg" />
+				<img src="images/1.jpg" />
+				<img src="images/2.jpg" />
+				<img src="images/3.jpg" />
 				<img src="images/4.jpg" />
 				<img src="images/5.jpg" />
 				<img src="images/6.jpg" />
