Make the location a bit smaller.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 				color: #555;
 			}
 			
+			div#header > div > span#location {
+				display: block;
+				font-size: 1.2em;
+				line-height: 1.2em;
+				margin-top: 0.4em;
+				color: #555;
+			}
+			
 			
 			div#imageBar {
 				white-space: nowrap;
@@ -142,7 +150,8 @@
 						MA CCC-SLP
 						<br />
 						Speech-Language Pathologist
-						<br />
+					</span>
+					<span id="location">
 						Vancouver, Washington
 					</span>
 				</div>
