--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		
 		<link rel="stylesheet" href="reset.css" type="text/css" />
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css" />
 		
 		<meta name="viewport" content="width=600, initial-scale=1.0">
 		
@@ -298,6 +299,7 @@
 		</div>
 		
 		<script src="jquery-3.2.1.min.js.css"></script>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript">
 			
 			$(document).ready(function() {
