Use <ul> for the list.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
 				font-size: 0.85em;
 			}
 			
+			div#biography ul {
+				list-style-type: circle;
+				margin-top: 0.5em;
+				margin-left: 2em;
+			}
+			
 			
 			div#testimonials > div {
 				margin: 2em 0;
@@ -217,16 +223,13 @@
 						I hold my Speech-Language Pathology license through the American Speech Language Hearing Association, as well as state licenses in Washington, Oregon, and California. In my practice, I combine my background in Behavioral Therapy and Speech-Language Pathology to provide effective, result-based therapy while working closely with parents to ensure carryover and generalization. I have worked primarily in a 1:1 environment, but also have provided group therapy. I have been fortunate enough to have collaborated with pediatric Occupational Therapists and Physical Therapists in order to develop the most effective and individualized plan of care for each of my clients. I believe in child-centered therapy focusing on functional communication and evidence-based practice.
 						<br /><br />
 						I have received education, training, and have furthered my professional growth in the following approaches:
-						<br /><br />
-						+ PROMPT trained for Childhood Apraxia of Speech and oral motor planning difficulties
-						<br /><br />
-						+ Kaufman Apraxia approach
-						<br /><br />
-						+ Michelle-Garcia Winner's Social-Cognitive Development Programs
-						<br /><br />
-						+ Therapy developed with consideration of social-emotional difficulties
-						<br /><br />
-						+ Play-based therapy
+						<ul>
+							<li>PROMPT trained for Childhood Apraxia of Speech and oral motor planning difficulties</li>
+							<li>Kaufman Apraxia approach</li>
+							<li>Michelle-Garcia Winner's Social-Cognitive Development Programs</li>
+							<li>Therapy developed with consideration of social-emotional difficulties</li>
+							<li>Play-based therapy</li>
+						</ul>
 		
 					</div>
 					
